:wrench: Fix: Newest spacing fixed

--- a/scss/components/_box-newest.scss
+++ b/scss/components/_box-newest.scss
@@ -2,45 +2,25 @@
 @import '../utilities/components/button-white';
 
 .newest-collection {
-  .title-wrapper {
-    margin-bottom: 0;
-  }
-
   .btn.btn-color-white {
     @extend .button-white;
   }
 
-  h2.title {
-    letter-spacing: 2.1px;
-    height: 90px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    @media (min-width: $screen-size-desktop) {
-      letter-spacing: 2.7px;
-      height: 140px;
-      margin-bottom: 10px;
-    }
-  }
-
-  .vc_column_container > .vc_column-inner {
-    padding-left: 0;
-    padding-right: 0;
-
-    @media (min-width: $screen-size-landscape) {
+  .vc_column_container {
+    & > .vc_column-inner {
       padding-left: 0;
       padding-right: 0;
     }
 
-    @media (min-width: $screen-size-tablet) {
-      margin-left: 15px !important;
-      margin-right: 15px !important;
-    }
-  }
+    .vc_column_container {
+      & > .vc_column-inner {
+        margin-top: 15px;
 
-  .vc_column_container:last-child > .vc_column-inner {
-    margin-bottom: 0 !important;
+        @media (min-width: $screen-size-tablet) {
+          margin-top: 0;
+        }
+      }
+    }
   }
 
   img {
